Unit_3/Debugging/3.1/Instructions.md
# Debugging Exercise 3.1

## How to Use the Code Editor

1. Select the "Run Code" button to execute the program.
2. Select the "Calculate Grade" button to generate a score based on the completed tasks.
3. Continue to modify, run, and calculate your code until you are happy with the grade.
4. Select the "Submit" button to turn in the assignment to your instructor.

## Book Instructions

The files provided contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

## Companion Instructions

The files provided in the code editor to the right contain syntax and/or logic errors. In each case, determine and fix the problem, remove all syntax and coding errors, and run the program to ensure it works properly.

An example of the program is shown below:

```
Enter the amount of your check >> 12.99
Enter the amount of your friend's check >> 9.50
The tip should be at least $1.9485
The tip should be at least $1.425
```

## Grading Criterion

Tasks

**Task 1:** The `DebugThree1` class compiles without error.
**Task 2:** The `calcTip()` method calculates a **15%** gratuity.
**Task 3:** The `DebugThree1` program accepts user input and displays the correct output.
